# recall-tauri

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: build-sidecar.js
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  utils.rs
src-tauri/src/algorithms/: action_extractor.rs  automata_constructor.rs  clause_decomposer.rs  conflict_searcher.rs  mod.rs
src-tauri/src/model/: actions.rs  automata.rs  contracts.rs  mod.rs
src-tauri/src/parser/: RelativizedCL.pest  ast_builder.rs  mod.rs  parser.rs
src/components/: Sidebar.css  Sidebar.tsx
src/context/: AnalysisContext.tsx
src/pages/: AnalysisPage.tsx  BatchAnalysisPage.tsx  DocumentationPage.tsx  InfoPage.tsx
