[package]
name = "recall"
version = "0.1.0"
description = "A Tauri App"
authors = ["Edson, Adilson"]
edition = "2021"
default-run = "recall"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "recall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
regex = "1.0"
winapi = { version = "0.3.9", features = ["consoleapi", "wincon"] }
pest = "2.6"
pest_derive = "2.6"
rayon = "1.8"
itertools = "0.14"
rustc-hash = "2.1"
sysinfo = "0.37.2"
libc = "0.2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
